fixed for mobile view

--- a/index.css
+++ b/index.css
@@ -110,6 +110,7 @@ p {
     justify-content: center;
     border: transparent 2px #fff;
     margin-top: 5rem;
+    flex-wrap: wrap;
 }
 
 .rulestext {
