--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 
 body {
-    background: linear-gradient(45deg, #595fb9, #26266f, #0c0c3b, #0c0c3b);
+    background: linear-gradient(to right, #0f172a, #334155);
     background-repeat: no-repeat;
     background-attachment: fixed;
     color: #fff;
@@ -24,8 +24,10 @@ h1 {
     transition: font-size 0.3s ease;
     font-size: 40px;
     text-decoration: none;
-    color: #fff;
+    color: transparent;
     position: relative;
+    background: linear-gradient(to left, #fcd34d, #ffffff, #fcd34d);
+    background-clip: text;
 }
 
 .HyperClanText::after {
@@ -123,6 +125,7 @@ p {
 
 .rules {
     width: min(45vb, 400px);
+    height:  200px;
     margin: 20px auto;
     padding: 20px;
     background-color: #181a3a;
@@ -171,6 +174,7 @@ h2 {
 
 .perks {
     width: min(45vb, 400px);
+    height:  200px;
     margin: 20px auto;
     padding: 20px;
     background-color: #181a3a;
@@ -178,6 +182,7 @@ h2 {
     transition: background-color 0.3s ease, box-shadow 0.3s ease, translate 0.3s ease;
     font-size: 1.2rem;
     position: relative;
+    cursor: pointer;
 }
 
 .perks::after, .perks::before {
@@ -209,6 +214,7 @@ h2 {
 
 .join {
     width: min(45vb, 300px);
+    height:  200px;
     margin: 20px auto;
     padding: 20px;
     background-color: #181a3a;
@@ -216,8 +222,6 @@ h2 {
     transition: background-color 0.3s ease, box-shadow 0.3s ease, translate 0.3s ease;
     position: relative;
     cursor: pointer;
-    background-image: image('discord.svg');
-    background-size: 50px;
 }
 
 
